# aurora-screenshots

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  aurora-screenshots.desktop  index.html  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-dist.sh  install.sh  package-release.sh
snap/: snapcraft.yaml
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  x11_grab.rs
src/components/: CaptureOverlay.tsx  HistoryItem.tsx  HistoryList.tsx  PinView.tsx  Settings.tsx  ShortcutRecorder.tsx
src/types/: index.ts
