[package]
name = "aurora-screenshots"
version = "0.1.0"
description = "Aurora Screenshots — clipboard manager and screen capture"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aurora_screenshots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
screenshots = "0.8"
ashpd = "0.10"
image = "0.25"
base64 = "0.22"
thiserror = "1"
arboard = "3"
tokio = { version = "1", features = ["time"] }
resvg = "0.44"
x11rb = "0.13"
raw-window-handle = "0.6"

