[profile.dev]
opt-level = 2          # optimiza el código intensivo (image encode, compositing) sin full release
debug = true           # mantiene debug symbols para backtraces
codegen-units = 1      # evita bug de LTO con hidden symbols (ub_checks) en Rust >= 1.82

[package]
name = "aurora-screenshots"
version = "0.3.0"
description = "Aurora Screenshots — clipboard manager and screen capture"
authors = ["Dani Acosta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aurora_screenshots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
screenshots = "0.8"
ashpd = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
thiserror = "1"
arboard = "3"
tokio = { version = "1", features = ["time", "process"] }
resvg = "0.44"
x11rb = "0.13"
raw-window-handle = "0.6"
pipewire = { version = "0.8", features = ["v0_3_34"] }

